# BasePythonOtus

./: .dockerignore  README.md  pyproject.toml  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  app.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: base.html
homework_05/views/: webapp.py
